# SorteosAnalyzed

./: .gitignore  Melate.csv  README.md  pyproject.toml  sorteos.properties
src/: SorteosMain.py
src/brain/: __init__.py
src/brainCsv/: __init__.py
src/sorteosanalyzed/: SorteosMain.py  sorteos.properties
src/sorteosanalyzed/brainCsv/: __init__.py
src/sorteosanalyzed/database/: __init__.py
