[project]
name = "sorteosanalyzed"
version = "0.1.0"
description = "Analizador melate"
authors = [{ name="Luis" }]
readme = "README.md"
requires-python = ">=3.9"

[project.urls]
Homepage = "https://github.com/19jluis92/SorteosAnalyzed"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]